data/all_generated_tests/raw_wast_tests/nop_UnreachableCodeExecution_163.wast
;; 4. Nest a `nop` instruction within a loop that leads to an `unreachable` instruction outside the loop. Ensure the control does not bypass the loop and run the `unreachable` instruction.

(assert_invalid
  (module
    (func (loop (nop)) (unreachable)))
  "unreachable executed"
)